src/objects/ShopAccountInfo__c.object
<CustomObject>
    <fields>
        <fullName>AccountRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>口座情報</relationshipLabel>
        <relationshipName>AccountRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountTypeLst__c</fullName>
        <label>口座種別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>買掛支払</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BankAccountNo__c</fullName>
        <label>口座番号</label>
        <length>7</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>BankBranchNameKana__c</fullName>
        <inlineHelpText>半角カタカナを入力してください</inlineHelpText>
        <label>支店名(カナ）</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankBranchName__c</fullName>
        <label>支店名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankBranchNumber__c</fullName>
        <label>支店番号</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankNameKana__c</fullName>
        <inlineHelpText>半角カタカナを入力してください</inlineHelpText>
        <label>金融機関名（カナ）</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankName__c</fullName>
        <label>金融機関名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankNumber__c</fullName>
        <label>金融機関番号</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DepositsType__c</fullName>
        <label>預金種目</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>普通</fullName>
                </value>
                <value>
                    <fullName>当座</fullName>
                </value>
                <value>
                    <fullName>貯蓄</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequestUserCode__c</fullName>
        <label>委託者コード</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestUserName__c</fullName>
        <inlineHelpText>半角カタカナを入力してください</inlineHelpText>
        <label>委託者名(名義人)</label>
        <length>40</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Seq__c</fullName>
        <externalId>true</externalId>
        <label>#Seq</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ShopInfoRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>店舗情報</label>
        <referenceTo>ShopInformation__c</referenceTo>
        <relationshipLabel>店舗口座情報</relationshipLabel>
        <relationshipName>KozaShopInfoRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StatusLst__c</fullName>
        <label>ステータス</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>有効</fullName>
                    <default>true</default>
                    <label>有効</label>
                </value>
                <value>
                    <fullName>無効</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TransferChargeKbn__c</fullName>
        <label>振込手数料負担先</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>先方負担</fullName>
                </value>
                <value>
                    <fullName>自社負担</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>口座情報</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>SA-{00000000}</displayFormat>
        <label>番号</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>CompanyRecordType</fullName>
        <active>true</active>
        <label>自社</label>
    </recordTypes>
    <recordTypes>
        <fullName>CustomerRecordType</fullName>
        <active>true</active>
        <label>取引先</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>